src/objects/Lunch_Meetup__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Host_Profile_Picture__c</fullName>
        <label>Host Profile Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Casual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enablement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch &amp; Learn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-boarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Lunch</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Lunch Meetup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LM-{0000000}</displayFormat>
        <label>Lunch Meetup ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lunch Meetups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>